[gd_scene load_steps=1 format=3 uid="uid://b5bnch8t8hqjo"]

[ext_resource type="PackedScene" uid="uid://c5x8f9g2h3k4l" path="res://scenes/ui_new/components/QTEContainer.tscn" id="2_qte"]
[ext_resource type="Script" path="res://src/ui_new/screens/FishingScreen.gd" id="3_script"]

[node name="FishingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("3_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ContentVBox" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="FishingArea" type="Control" parent="VBoxContainer/MarginContainer/ContentVBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CastButton" type="Button" parent="VBoxContainer/MarginContainer/ContentVBox/FishingArea"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -60.0
offset_right = 75.0
offset_bottom = -10.0
text = "Lanzar Caña"

[node name="BottomButtonsContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/ContentVBox"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="BottomPanel" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ContentVBox/BottomButtonsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AutoCastButton" type="Button" parent="VBoxContainer/MarginContainer/ContentVBox/BottomButtonsContainer/BottomPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Auto Pesca: OFF"

[node name="StatsButton" type="Button" parent="VBoxContainer/MarginContainer/ContentVBox/BottomButtonsContainer/BottomPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Estadísticas"

[node name="QTEContainer" parent="." instance=ExtResource("2_qte")]
